--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -98,10 +98,6 @@ body {
 		display: none;
 	}
 }
-.page {
-	height: rem(1000);
-	background: gray;
-}
 // Ограничивающий контейнер ======================================================================================================================================================================================================================
 
 /*
@@ -136,4 +132,4 @@ body {
 @import "../components/footer/footer";
 
 // Подключение стилей отдельных страниц
-//@import "home";
+@import "home";
