--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,16 +1,16 @@
 // Общий файл элементов форм
 // Для подключения/отключения стилей конкретного єлемента формы смотри base/forms/forms.scss
-//@import "base/forms/forms";
+@import "base/forms/forms";
 
 // Стили попапов
-// @import "base/popup";
+ @import "base/popup";
 
 // Стили спойлеров
 //@import "base/spollers";
 
-//@import "base/swiper.scss";
+@import "base/swiper.scss";
 // Стили табов
-// @import "base/tabs";
+ @import "base/tabs";
 
 // Стили карт
 // @import "base/maps";
